fix: 보안 감사 이슈 문서화 및 주석 추가
- Giscus form field id/name 속성 이슈 문서화 (third-party 위젯)
- CSP eval() 경고에 대한 설명 주석 추가 (Google Translate/Ads 호환성)
- Third-party 스크립트 관련 보안 감사 경고는 정상 동작임을 명시

--- a/_includes/giscus.html
+++ b/_includes/giscus.html
@@ -44,6 +44,7 @@
     </div>
 
     <!-- Giscus Widget -->
+    <!-- Note: Giscus dynamically creates form fields. These third-party fields may not have id/name attributes, which is expected behavior for third-party widgets. -->
     <div class="giscus-wrapper">
       <div class="giscus-loading" id="giscus-loading">
         <div class="loading-spinner"></div>
